CHANGELOG
=========

0.4.1
-----

* Bump lombok from 1.16.20 to 1.18.2 (#23)
* Bump assertj-core from 3.9.1 to 3.11.1 (#22)
* Bump mockito-core from 2.16.0 to 2.23.0 (#21)(#26)
* Bump tiles-maven-plugin from 2.10 to 2.12 (#17)
* Bump kemitix-parent from 5.1.0 to 5.2.0 (#18)(#25)

0.4.0
-----

* Complete rewrite with new API

0.3.0
-----

* `Wrapper.removeWrapper()`: now returns either a `Wrapper` or the core object
* `Wrapper.asWrapper()`: added

0.2.0
-----

* `WrapperState` holds state for `Wrapper` implementations
* `Wrapper.getWrapperState()`: added
* `Wrapper.getWrapperDelegate()`: added
* `Wrapper.getCore()` => `getWrapperCore()`
* `Wrapper.remove()` => `removeWrapper()`

0.1.0
-----

* Initial release