@@ -1,14 +1,3 @@
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# maven build outputs
-target/
-
-# intellij
 .idea/
 *.iml
-
-# Git and temp files
-*.orig
-*.patch
-*~
+target/
