@@ -9,6 +9,7 @@ CHANGELOG
 * Bump mockito-core from 2.16.0 to 2.23.0 (#21)(#26)
 * Bump tiles-maven-plugin from 2.10 to 2.12 (#17)
 * Bump kemitix-parent from 5.1.0 to 5.2.0 (#18)(#25)
+* Bump kemitix-maven-tiles from 0.8.1 to 1.3.2 (#27)
 
 0.4.0
 -----
